--- a/templates/sensor_predict.html
+++ b/templates/sensor_predict.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% comment %} OF NO USE CURRENTLY {% endcomment %}
+
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,7 +30,6 @@
                     <div class="prediction-text">{{ prediction_text }}</div>
                 </div>
                 
-                <!-- Hidden sensor inputs for future implementation -->
                 <div class="hidden-inputs" style="display: none;">
                     <input type="number" name="engine_id" placeholder="Engine ID" step="1">
                     <input type="number" name="cycles_per_minute" placeholder="Cycles per minute" step="1">
@@ -43,4 +44,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> {% endcomment %}
