--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
-/* Import Google Fonts */
+/* work in progress */
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 
 /* Reset and base styles */
